added start and stop

--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,8 @@
         <div id="stats">
             <div class="space-between">
                 <span>Total</span>
-                <span>48.69h</span>
-                <span>420$</span>
+                <span id="totalHours">48.69h</span>
+                <span id="totalEarned">420$</span>
             </div>
         </div>
         <div id="list"></div>
@@ -29,6 +29,7 @@
     <script src="vnode.js"></script>
     <script src="Storage.js"></script>
     <script src="Timer.js"></script>
+    <script src="Stats.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
